--- a/richwysiwygeditor/build.gradle
+++ b/richwysiwygeditor/build.gradle
@@ -6,7 +6,7 @@ android {
 
 
     defaultConfig {
-        minSdkVersion 19
+        minSdkVersion 15
         targetSdkVersion 28
         versionCode 1
         versionName "1.0"
@@ -38,5 +38,8 @@ dependencies {
     implementation 'androidx.appcompat:appcompat:1.1.0-alpha04'
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.2.0-alpha05'
     implementation 'androidx.constraintlayout:constraintlayout:2.0.0-alpha5'
-    implementation 'com.github.esafirm.android-image-picker:imagepicker:2.0.0'
+    implementation 'com.github.esafirm.android-image-picker:imagepicker:2.2.0'
+    implementation 'com.github.bumptech.glide:glide:4.5.0'
+    implementation 'org.jetbrains:annotations:15.0'
+    implementation 'org.apache.commons:commons-text:1.6'
 }
