--- a/richwysiwygeditor/build.gradle
+++ b/richwysiwygeditor/build.gradle
@@ -34,12 +34,12 @@ android {
 dependencies {
     implementation fileTree(include: ['*.jar'], dir: 'libs')
     testImplementation 'junit:junit:4.12'
-    androidTestImplementation 'androidx.test:runner:1.2.0-alpha05'
-    implementation 'androidx.appcompat:appcompat:1.1.0-alpha04'
-    androidTestImplementation 'androidx.test.espresso:espresso-core:3.2.0-alpha05'
-    implementation 'androidx.constraintlayout:constraintlayout:2.0.0-alpha5'
-//    implementation 'com.github.esafirm.android-image-picker:imagepicker:2.2.0'
-    implementation 'com.github.bumptech.glide:glide:4.5.0'
+    androidTestImplementation 'androidx.test:runner:1.3.0-alpha05'
+    implementation 'androidx.appcompat:appcompat:1.2.0-beta01'
+    androidTestImplementation 'androidx.test.espresso:espresso-core:3.3.0-alpha05'
+    implementation 'androidx.constraintlayout:constraintlayout:2.0.0-beta4'
+    implementation 'com.github.esafirm.android-image-picker:imagepicker:2.2.0'
+//    implementation 'com.github.bumptech.glide:glide:4.5.0'
     implementation 'org.jetbrains:annotations:15.0'
     implementation 'org.apache.commons:commons-text:1.6'
 }
