--- a/richwysiwygeditor/build.gradle
+++ b/richwysiwygeditor/build.gradle
@@ -43,4 +43,5 @@ dependencies {
 //    implementation 'com.github.bumptech.glide:glide:4.5.0'
     implementation 'org.jetbrains:annotations:15.0'
     implementation 'org.apache.commons:commons-text:1.6'
+    implementation 'net.cachapa.expandablelayout:expandablelayout:2.9.2'
 }
