--- a/richwysiwygeditor/build.gradle
+++ b/richwysiwygeditor/build.gradle
@@ -37,7 +37,7 @@ dependencies {
     androidTestImplementation 'androidx.test:runner:1.3.0-rc03'
     implementation 'androidx.appcompat:appcompat:1.3.0-alpha02'
     implementation 'com.google.android.material:material:1.3.0-alpha02'
-//    androidTestImplementation 'androidx.test.espresso:espresso-core:3.3.0-alpha05'
+//    androidTestImplementation 'androidx.test.espresso:espresso-core:3.3.0-rc03'
     implementation 'androidx.constraintlayout:constraintlayout:2.0.0'
 //    implementation 'com.github.esafirm.android-image-picker:imagepicker:2.2.0'
 //    implementation 'com.github.bumptech.glide:glide:4.5.0'
