--- a/richwysiwygeditor/build.gradle
+++ b/richwysiwygeditor/build.gradle
@@ -1,13 +1,11 @@
 apply plugin: 'com.android.library'
 
 android {
-    compileSdkVersion 28
-
-
+    compileSdkVersion 29
 
     defaultConfig {
         minSdkVersion 15
-        targetSdkVersion 28
+        targetSdkVersion 29
         versionCode 1
         versionName "1.0"
 
@@ -34,11 +32,11 @@ android {
 dependencies {
     implementation fileTree(include: ['*.jar'], dir: 'libs')
     testImplementation 'junit:junit:4.12'
-    androidTestImplementation 'androidx.test:runner:1.3.0-rc03'
+    androidTestImplementation 'androidx.test:runner:1.3.0'
     implementation 'androidx.appcompat:appcompat:1.3.0-alpha02'
     implementation 'com.google.android.material:material:1.3.0-alpha02'
 //    androidTestImplementation 'androidx.test.espresso:espresso-core:3.3.0-rc03'
-    implementation 'androidx.constraintlayout:constraintlayout:2.0.0'
+    implementation 'androidx.constraintlayout:constraintlayout:2.0.1'
 //    implementation 'com.github.esafirm.android-image-picker:imagepicker:2.2.0'
 //    implementation 'com.github.bumptech.glide:glide:4.5.0'
     implementation 'org.jetbrains:annotations:15.0'
